--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,38 +1,44 @@
 {
+    "ad_domain": "Domaine AD",
+    "ad_comments": "Commentaires AD",
     "bound": "Lié",
+    "admin_groups": "Groupes Admins autorisés",
+    "networkprotocol": "Protocole réseau",
+    "computeraccount": "Compte d'ordinateur",
+    "mobileaccount": "Compte mobile",
     "notbound": "Non lié",
-    "info": "Cumuls depuis que ces données sont collectées",
+    "info": "Totaux depuis la collecte de ces données",
     "bound_title": "Lié à un service d'annuaire",
+    "boundstatus": "Status des liaisons",
     "clienttabtitle": "Service d'annuaire",
     "which_directory_service": "Service d'annuaire utilisé",
     "directory_service_comments": "Commentaires Active Directory",
     "adforest": "Forêt Active Directory",
     "addomain": "Domaine Active Directory",
-    "computeraccount": "Compte d'ordinateur",
     "user_experience": "Options avancées - Expérience utilisateur",
-    "createmobileaccount": "Créer un compte mobile lors de l'ouverture de session",
-    "requireconfirmation": "Exiger une confirmation",
-    "forcehomeinstartup": "Forcer l'utilisation du répertoire de départ sur le disque de démarrage",
-    "mounthomeassharepoint": "Monter le répertoire de départ comme un point de partage",
-    "usewindowsuncpathforhome": "Utiliser le chemin UNC pour déduire l'emplacement du répertoire de départ réseau",
-    "networkprotocoltobeused": "Protocole réseau utilisé",
+    "createmobileaccount": "Crée un compte mobile lors de l'ouverture de session",
+    "requireconfirmation": "Demande confirmation",
+    "forcehomeinstartup": "Forcer l'utilisation du disque de démarrage pour le dosssier de départ",
+    "mounthomeassharepoint": "Monter le dossier de départ comme point de partage",
+    "usewindowsuncpathforhome": "Utiliser le chemin UNC pour l'emplacement du dossier de départ",
+    "networkprotocoltobeused": "Protocole réseau à utiliser",
     "defaultusershell": "Shell utilisateur par défaut",
     "mappings": "Options avancées - Mappages",
     "mappinguidtoattribute": "Mappage UID à attribuer",
-    "mappingusergidtoattribute": "Mappage du GID utilisateur à attribuer",
-    "mappinggroupgidtoattr": "Mappage du GID du groupe à attribuer",
-    "generatekerberosauth": "Générer l'autorité Kerberos",
+    "mappingusergidtoattribute": "Mappage du GID d'utilisateur à attribuer",
+    "mappinggroupgidtoattr": "Mappage du GID de groupe à attribuer",
+    "generatekerberosauth": "Generarer l'autorité Kerberos",
     "administrative": "Options avancées - Administratif",
-    "preferreddomaincontroller": "Préférer ce serveur de domaine",
-    "allowedadmingroups": "Permettre l'administration par le groupe administrateurs",
-    "authenticationfromanydomain": "Authentification depuis n'importe quel domaine",
+    "preferreddomaincontroller": "Contrôleur de domaine préféré",
+    "allowedadmingroups": "Groupes Admin autorisés",
+    "authenticationfromanydomain": "Authentication depuis n'importe quel domaine",
     "packetsigning": "Signature des paquets",
     "packetencryption": "Cryptage des paquets",
-    "passwordchangeinterval": "Intervalle de changement de mot de passe",
+    "passwordchangeinterval": "Intervalle de changement du mot de passe",
     "restrictdynamicdnsupdates": "Limiter les mises à jour DNS dynamiques",
-    "namespacemode": "Espace de noms",
-    "modified_computernames_title": "Pas de concordance avec les noms AD",
-    "modified_computernames_tooltip": "Ordinateurs ne correspondants pas au nom AD",
+    "namespacemode": "Mode Espace de nom",
+    "modified_computernames_title": "Noms AD non correspondants",
+    "modified_computernames_tooltip": "Ordinateurs dont le nom ne correspond pas au nom AD",
     "title": "Service d'annuaire",
-    "report": "Rapport Services d'annuaire"
+    "report": "Service d'annuaire"
 }
