--- a/locales/de.json
+++ b/locales/de.json
@@ -1,38 +1,44 @@
 {
-    "bound": "Angebunden",
-    "notbound": "Nicht angebunden",
-    "info": "Gesamt seit diese Daten gesammelt werden",
-    "bound_title": "An Verzeichnisdienst angebunden",
-    "clienttabtitle": "Verzeichnisdienst",
-    "which_directory_service": "Benutzter Verzeichnisdienst",
-    "directory_service_comments": "Active Directory Kommentare",
-    "adforest": "Active Directory Baum",
-    "addomain": "Active Directory Domain",
-    "computeraccount": "Computerkonto",
-    "user_experience": "Erweiterte Optionen - User Experience",
-    "createmobileaccount": "Mobilen Account bei der Anmeldung erstellen",
-    "requireconfirmation": "Bestätigung einholen",
-    "forcehomeinstartup": "Homeverzeichnis auf Startup Disk",
-    "mounthomeassharepoint": "Homeverzeichnis als Share mounten",
-    "usewindowsuncpathforhome": "Windows UNC Pfad als Homeverzeichnis",
-    "networkprotocoltobeused": "Netzwerkprotokoll",
-    "defaultusershell": "Standard-Usershell",
-    "mappings": "Erweiterte Optionen - Mappings",
-    "mappinguidtoattribute": "UID an Attribut mappen",
-    "mappingusergidtoattribute": "User GUID an Attribut mappen",
-    "mappinggroupgidtoattr": "Group GUID an Attribut mappen",
-    "generatekerberosauth": "Kerberos Authority generieren ",
-    "administrative": "Erweiterte Optionen - Administration",
-    "preferreddomaincontroller": "Bevorzugter Domain Controller",
-    "allowedadmingroups": "Erlaubte Admin-Gruppen",
-    "authenticationfromanydomain": "Authentifizierung aus jeder Domain erlauben",
-    "packetsigning": "Packet Signing",
-    "packetencryption": "Packet Encryption",
-    "passwordchangeinterval": "Passwortwechselintervall",
-    "restrictdynamicdnsupdates": "Dynamische DNS-Updates beschränken",
-    "namespacemode": "Namespace Mode",
-    "modified_computernames_title": "Nicht übereinstimmende ARD Namen",
-    "modified_computernames_tooltip": "Computer, bei denen der ARD Name nicht mit AD übereinstimmt",
-    "title": "Verzeichnisdienste",
-    "report": "Directory Services-Report"
+  "ad_domain": "AD Domain",
+  "ad_comments": "AD Kommentar",
+  "bound": "Angebunden",
+  "admin_groups": "Erlaubte Admin-Gruppen",
+  "networkprotocol": "Netzwerk-Protokoll",
+  "computeraccount": "Computerkonto",
+  "mobileaccount": "Mobiler Account",
+  "notbound": "Nicht angebunden",
+  "info": "Gesamt seit diese Daten gesammelt werden",
+  "bound_title": "An Verzeichnisdienst angebunden",
+  "boundstatus": "Angebunden?",
+  "clienttabtitle": "Verzeichnisdienst",
+  "which_directory_service": "Benutzter Verzeichnisdienst",
+  "directory_service_comments": "Active Directory Kommentare",
+  "adforest": "Active Directory Baum",
+  "addomain": "Active Directory Domain",
+  "user_experience": "Erweiterte Optionen - User Experience",
+  "createmobileaccount": "Mobilen Account bei der Anmeldung erstellen",
+  "requireconfirmation": "Bestätigung einholen",
+  "forcehomeinstartup": "Homeverzeichnis auf Startup Disk",
+  "mounthomeassharepoint": "Homeverzeichnis als Share mounten",
+  "usewindowsuncpathforhome": "Windows UNC Pfad als Homeverzeichnis",
+  "networkprotocoltobeused": "Netzwerkprotokoll",
+  "defaultusershell": "Standard-Usershell",
+  "mappings": "Erweiterte Optionen - Mappings",
+  "mappinguidtoattribute": "UID an Attribut mappen",
+  "mappingusergidtoattribute": "User GUID an Attribut mappen",
+  "mappinggroupgidtoattr": "Group GUID an Attribut mappen",
+  "generatekerberosauth": "Kerberos Authority generieren ",
+  "administrative": "Erweiterte Optionen - Administration",
+  "preferreddomaincontroller": "Bevorzugter Domain Controller",
+  "allowedadmingroups": "Erlaubte Admin-Gruppen",
+  "authenticationfromanydomain": "Authentifizierung aus jeder Domain erlauben",
+  "packetsigning": "Packet Signing",
+  "packetencryption": "Packet Encryption",
+  "passwordchangeinterval": "Passwortwechselintervall",
+  "restrictdynamicdnsupdates": "Dynamische DNS-Updates beschränken",
+  "namespacemode": "Namespace Mode",
+  "modified_computernames_title": "Nicht übereinstimmende ARD Namen",
+  "modified_computernames_tooltip": "Computer, bei denen der ARD Name nicht mit AD übereinstimmt",
+  "title": "Verzeichnisdienste",
+  "report": "Directory Services-Report"
 }
