Add column to filter bound status against (#1065)
* Add bound column to filter against

* Fixed migration table name

* Fixed migration table name

* Fixed migration

* Fixed locales

* Fixed typo

* Adjust localizations

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,44 +1,45 @@
 {
-  "ad_domain": "AD Domain",
   "ad_comments": "AD Kommentar",
-  "bound": "Angebunden",
+  "ad_domain": "AD Domain",
+  "addomain": "Active Directory Domain",
+  "adforest": "Active Directory Baum",
   "admin_groups": "Erlaubte Admin-Gruppen",
-  "networkprotocol": "Netzwerk-Protokoll",
-  "computeraccount": "Computerkonto",
-  "mobileaccount": "Mobiler Account",
-  "notbound": "Nicht angebunden",
-  "info": "Gesamt seit diese Daten gesammelt werden",
+  "administrative": "Erweiterte Optionen - Administration",
+  "allowedadmingroups": "Erlaubte Admin-Gruppen",
+  "authenticationfromanydomain": "Authentifizierung aus jeder Domain erlauben",
   "bound_title": "An Verzeichnisdienst angebunden",
+  "bound": "Angebunden",
   "boundstatus": "Angebunden?",
   "clienttabtitle": "Verzeichnisdienst",
-  "which_directory_service": "Benutzter Verzeichnisdienst",
-  "directory_service_comments": "Active Directory Kommentare",
-  "adforest": "Active Directory Baum",
-  "addomain": "Active Directory Domain",
-  "user_experience": "Erweiterte Optionen - User Experience",
+  "computeraccount": "Computerkonto",
   "createmobileaccount": "Mobilen Account bei der Anmeldung erstellen",
-  "requireconfirmation": "Bestätigung einholen",
-  "forcehomeinstartup": "Homeverzeichnis auf Startup Disk",
-  "mounthomeassharepoint": "Homeverzeichnis als Share mounten",
-  "usewindowsuncpathforhome": "Windows UNC Pfad als Homeverzeichnis",
-  "networkprotocoltobeused": "Netzwerkprotokoll",
   "defaultusershell": "Standard-Usershell",
+  "directory_service_comments": "Active Directory Kommentare",
+  "directory_service": "Directory Service",
+  "forcehomeinstartup": "Homeverzeichnis auf Startup Disk",
+  "generatekerberosauth": "Kerberos Authority generieren ",
+  "info": "Gesamt seit diese Daten gesammelt werden",
+  "mappinggroupgidtoattr": "Group GUID an Attribut mappen",
   "mappings": "Erweiterte Optionen - Mappings",
   "mappinguidtoattribute": "UID an Attribut mappen",
   "mappingusergidtoattribute": "User GUID an Attribut mappen",
-  "mappinggroupgidtoattr": "Group GUID an Attribut mappen",
-  "generatekerberosauth": "Kerberos Authority generieren ",
-  "administrative": "Erweiterte Optionen - Administration",
-  "preferreddomaincontroller": "Bevorzugter Domain Controller",
-  "allowedadmingroups": "Erlaubte Admin-Gruppen",
-  "authenticationfromanydomain": "Authentifizierung aus jeder Domain erlauben",
-  "packetsigning": "Packet Signing",
-  "packetencryption": "Packet Encryption",
-  "passwordchangeinterval": "Passwortwechselintervall",
-  "restrictdynamicdnsupdates": "Dynamische DNS-Updates beschränken",
-  "namespacemode": "Namespace Mode",
+  "mobileaccount": "Mobiler Account",
   "modified_computernames_title": "Nicht übereinstimmende ARD Namen",
   "modified_computernames_tooltip": "Computer, bei denen der ARD Name nicht mit AD übereinstimmt",
+  "mounthomeassharepoint": "Homeverzeichnis als Share mounten",
+  "namespacemode": "Namespace Mode",
+  "networkprotocol": "Netzwerk-Protokoll",
+  "networkprotocoltobeused": "Netzwerkprotokoll",
+  "notbound": "Nicht angebunden",
+  "packetencryption": "Packet Encryption",
+  "packetsigning": "Packet Signing",
+  "passwordchangeinterval": "Passwortwechselintervall",
+  "preferreddomaincontroller": "Bevorzugter Domain Controller",
+  "report": "Directory Services-Report",
+  "requireconfirmation": "Bestätigung einholen",
+  "restrictdynamicdnsupdates": "Dynamische DNS-Updates beschränken",
   "title": "Verzeichnisdienste",
-  "report": "Directory Services-Report"
+  "user_experience": "Erweiterte Optionen - User Experience",
+  "usewindowsuncpathforhome": "Windows UNC Pfad als Homeverzeichnis",
+  "which_directory_service": "Benutzter Verzeichnisdienst"
 }
